update the name

--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
                                                     <img src="Andrew.png" alt="">
                                                     <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/" class="expand-trigger content-popup"></span></div>
                                                 <div class="team-info">
-                                                    <h5 class="team-name">Andrew Bondarenko</h5>
+                                                    <h5 class="team-name">Abko</h5>
                                                     <span class="team-title">Technical Support @Abko</span>
                                                 </div>
                                             </div>
