wallet link update

--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                                             <div class="wpb_single_image wpb_content_element vc_align_center">
 
                                                 <figure class="wpb_wrapper vc_figure">
-                                                    <div class="vc_single_image-wrapper   vc_box_border_grey"><a href="https://github.com/Acedcoin/AceD/releases/"><img
+                                                    <div class="vc_single_image-wrapper   vc_box_border_grey"><a href="https://github.com/Acedcoin/AceD/releases/tag/1.5"><img
                                                             width="900" height="675" src="3_Image-066.png"
                                                             class="vc_single_image-img attachment-full" alt=""
                                                             srcset="3_Image-066.png 900w, 3_Image-066.png 300w, 3_Image-066.png 768w"
@@ -573,7 +573,7 @@
                                                     <!--<p>Early supporters program is live, where you will be able to acquire AceD at a rate of 0.75 USD directly from the AceD team. As an added benefit this gives you, the investor, the opportunity to potentially acquire sufficient AceD to set up a Masternode while at the same time assisting in enhancing the accessibility of AceD across exchange sites. Please get in touch with @MaGe-AceD9956 for MN presale inquires.</p>-->
                                                     <!--<a class="btn btn-alt btn-sm" href="https://github.com/Acedcoin/AceD/releases/download/v1.0/aced-qt.exe" target="_self">Download Wallets</a>-->
                                                     <div class="coicon">
-                                                        <div><a href="https://github.com/Acedcoin/AceD/releases/"><img src="windows.png"/></a></div>
+                                                        <div><a href="https://github.com/Acedcoin/AceD/releases/tag/1.5"><img src="windows.png"/></a></div>
                                                         <div><img src="Linux-icon.png"/></div>
                                                         <div><img src="Apple-icon.png"/></div>
                                                         <div><img src="raspberry-pi.png"/></div>
