--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
                                                     <div class="coicon">
                                                         <div><a href="https://github.com/Acedcoin/AceD/releases/download/1.5/aced-qt_syncfix.exe"><img src="windows.png"/></a></div>
                                                         <div><img src="Linux-icon.png"/></div>
-                                                        <div href=" https://github.com/Acedcoin/AceD/releases/download/1.5/AceD-Qt_syncfix.dmg"><img src="Apple-icon.png"/></div>
+                                                        <div><a href="https://github.com/Acedcoin/AceD/releases/download/1.5/AceD-Qt_syncfix.dmg"><img src="Apple-icon.png"/></a></div>
                                                         <div><img src="raspberry-pi.png"/></div>
                                                     </div>
 
