--- a/index.html
+++ b/index.html
@@ -318,11 +318,11 @@
                                     <div class="wpb_text_column wpb_content_element  header-image">
                                         <div class="wpb_wrapper" style="text-align: center;">
                                             <img src="AceD-01.png" alt="header" style="width: 87%;max-width: 401px;"><br>
-                                            <div style="text-align: center; max-width: 451px; margin:auto;">
-                                                <h2 style="margin-bottom: 1em;">Pre Sale Ends</h2>
-                                                <div class="clock"></div>
-                                                <div class="message"></div>
-                                            </div>
+                                            <!--<div style="text-align: center; max-width: 451px; margin:auto;">-->
+                                                <!--<h2 style="margin-bottom: 1em;">Pre Sale Ends</h2>-->
+                                                <!--<div class="clock"></div>-->
+                                                <!--<div class="message"></div>-->
+                                            <!--</div>-->
                                         </div>
                                     </div>
                                 </div>
