--- a/buycoin.html
+++ b/buycoin.html
@@ -200,9 +200,9 @@
                         <li id="menu-item-150"
                             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-150"><a
                                 href="https://www.acedcoin.com/#intro" class="nav-link">What is AceD?</a></li>
-                        <li id="menu-item-241"
-                            class="menu-item menu-item-type-custom menu-item-object-custom menu-item-241"><a
-                                href="https://www.acedcoin.com/#tokensale" class="nav-link">Early Supporters</a></li>
+                        <!--<li id="menu-item-241"-->
+                            <!--class="menu-item menu-item-type-custom menu-item-object-custom menu-item-241"><a-->
+                                <!--href="https://www.acedcoin.com/#tokensale" class="nav-link">Early Supporters</a></li>-->
                         <li id="menu-item-242"
                             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-242"><a
                                 href="https://www.acedcoin.com/#roadmap" class="nav-link">Roadmap</a></li>
