--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@
                         <li id="menu-item-150"
                             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-150"><a
                                 href="#intro" class="nav-link">What is AceD?</a></li>
-                        <li id="menu-item-241"
-                            class="menu-item menu-item-type-custom menu-item-object-custom menu-item-241"><a
-                                href="#tokensale" class="nav-link">Pre sale</a></li>
+                        <!--<li id="menu-item-241"-->
+                            <!--class="menu-item menu-item-type-custom menu-item-object-custom menu-item-241"><a-->
+                                <!--href="#tokensale" class="nav-link">Pre sale</a></li>-->
                         <li id="menu-item-242"
                             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-242"><a
                                 href="#roadmap" class="nav-link">Roadmap</a></li>
@@ -609,97 +609,97 @@
         </div>
         <div class="clearfix"></div>
     </section>
-    <section id="tokensale" class="vc_rows wpb_row vc_row-fluid section-pad section-bg-alt">
-        <div class="container">
-            <div class="row">
-                <div class="wpb_column vc_column_container vc_col-sm-12">
-                    <div class="vc_column-inner ">
-                        <div class="wpb_wrapper">
-                            <div class="vc_row wpb_row vc_inner vc_row-fluid vc_custom_1520830144361">
-                                <div class="row">
-                                    <div class="order-md-first order-last wpb_column vc_column_container vc_col-sm-12">
-                                        <div class="vc_column-inner ">
-                                            <div class="wpb_wrapper">
-                                                <div class="wpb_text_column wpb_content_element  vc_custom_1520828093008">
-                                                    <div class="wpb_wrapper" style="text-align: center; max-width: 777px; margin: auto;">
-                                                        <h2>Pre sale Program is now LIVE</h2>
-                                                        <p>Join AceD Pre sale program to get early access to Masternodes and Wallets. The raised funds are to be spent on Team Building, Platform Maintenance, Marketing, and Development. Please join our <a href="https://discord.gg/bW7sYBg">Discord</a> and contact @MaGe-AceD#9956 for sales inquiries.</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="vc_row wpb_row vc_inner vc_row-fluid vc_row-o-equal-height vc_row-o-content-middle vc_row-flex">
-                                <div class="event-info wpb_column vc_column_container vc_col-sm-12 vc_col-md-6">
-                                    <div class="vc_column-inner ">
-                                        <div class="wpb_wrapper">
-                                            <div class="row">
-                                                <div class="col-sm-6">
-                                                    <div class="event-single-info">
-                                                        <h6>Start</h6>
-                                                        <p>May 31st 2018</p>
-                                                    </div>
-                                                </div>
-                                                <div class="col-sm-6">
-                                                    <div class="event-single-info">
-                                                        <h6>Number of Coins for Sale</h6>
-                                                        <p>250,000 (ACED)</p>
-                                                    </div>
-                                                </div>
-                                                <div class="col-sm-6">
-                                                    <div class="event-single-info">
-                                                        <h6>End</h6>
-                                                        <p>June 22nd 2018</p>
-                                                    </div>
-                                                </div>
-                                                <div class="col-sm-6">
-                                                    <div class="event-single-info">
-                                                        <h6>Coin Price</h6>
-                                                        <p>0.75 USD</p>
-                                                    </div>
-                                                </div>
-                                                <div class="col-sm-6">
-                                                    <div class="event-single-info">
-                                                        <h6>Acceptable currencies</h6>
-                                                        <p>BTC</p>
-                                                    </div>
-                                                </div>
-                                                <div class="col-sm-6">
-                                                    <div class="event-single-info">
-                                                        <h6>Minimal Transaction Amount</h6>
-                                                        <p>$200</p>
-                                                    </div>
-                                                </div>
-                                            </div>
+    <!--<section id="tokensale" class="vc_rows wpb_row vc_row-fluid section-pad section-bg-alt">-->
+        <!--<div class="container">-->
+            <!--<div class="row">-->
+                <!--<div class="wpb_column vc_column_container vc_col-sm-12">-->
+                    <!--<div class="vc_column-inner ">-->
+                        <!--<div class="wpb_wrapper">-->
+                            <!--<div class="vc_row wpb_row vc_inner vc_row-fluid vc_custom_1520830144361">-->
+                                <!--<div class="row">-->
+                                    <!--<div class="order-md-first order-last wpb_column vc_column_container vc_col-sm-12">-->
+                                        <!--<div class="vc_column-inner ">-->
+                                            <!--<div class="wpb_wrapper">-->
+                                                <!--<div class="wpb_text_column wpb_content_element  vc_custom_1520828093008">-->
+                                                    <!--<div class="wpb_wrapper" style="text-align: center; max-width: 777px; margin: auto;">-->
+                                                        <!--<h2>Pre sale Program is now LIVE</h2>-->
+                                                        <!--<p>Join AceD Pre sale program to get early access to Masternodes and Wallets. The raised funds are to be spent on Team Building, Platform Maintenance, Marketing, and Development. Please join our <a href="https://discord.gg/bW7sYBg">Discord</a> and contact @MaGe-AceD#9956 for sales inquiries.</p>-->
+                                                    <!--</div>-->
+                                                <!--</div>-->
+                                            <!--</div>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                            <!--<div class="vc_row wpb_row vc_inner vc_row-fluid vc_row-o-equal-height vc_row-o-content-middle vc_row-flex">-->
+                                <!--<div class="event-info wpb_column vc_column_container vc_col-sm-12 vc_col-md-6">-->
+                                    <!--<div class="vc_column-inner ">-->
+                                        <!--<div class="wpb_wrapper">-->
+                                            <!--<div class="row">-->
+                                                <!--<div class="col-sm-6">-->
+                                                    <!--<div class="event-single-info">-->
+                                                        <!--<h6>Start</h6>-->
+                                                        <!--<p>May 31st 2018</p>-->
+                                                    <!--</div>-->
+                                                <!--</div>-->
+                                                <!--<div class="col-sm-6">-->
+                                                    <!--<div class="event-single-info">-->
+                                                        <!--<h6>Number of Coins for Sale</h6>-->
+                                                        <!--<p>250,000 (ACED)</p>-->
+                                                    <!--</div>-->
+                                                <!--</div>-->
+                                                <!--<div class="col-sm-6">-->
+                                                    <!--<div class="event-single-info">-->
+                                                        <!--<h6>End</h6>-->
+                                                        <!--<p>June 22nd 2018</p>-->
+                                                    <!--</div>-->
+                                                <!--</div>-->
+                                                <!--<div class="col-sm-6">-->
+                                                    <!--<div class="event-single-info">-->
+                                                        <!--<h6>Coin Price</h6>-->
+                                                        <!--<p>0.75 USD</p>-->
+                                                    <!--</div>-->
+                                                <!--</div>-->
+                                                <!--<div class="col-sm-6">-->
+                                                    <!--<div class="event-single-info">-->
+                                                        <!--<h6>Acceptable currencies</h6>-->
+                                                        <!--<p>BTC</p>-->
+                                                    <!--</div>-->
+                                                <!--</div>-->
+                                                <!--<div class="col-sm-6">-->
+                                                    <!--<div class="event-single-info">-->
+                                                        <!--<h6>Minimal Transaction Amount</h6>-->
+                                                        <!--<p>$200</p>-->
+                                                    <!--</div>-->
+                                                <!--</div>-->
+                                            <!--</div>-->
 
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="wpb_column vc_column_container vc_col-sm-12 vc_col-lg-offset-1 vc_col-lg-5 vc_col-md-6">
-                                    <div class="vc_column-inner ">
-                                        <div class="wpb_wrapper">
-                                            <div class="wpb_single_image wpb_content_element vc_align_center">
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                                <!--<div class="wpb_column vc_column_container vc_col-sm-12 vc_col-lg-offset-1 vc_col-lg-5 vc_col-md-6">-->
+                                    <!--<div class="vc_column-inner ">-->
+                                        <!--<div class="wpb_wrapper">-->
+                                            <!--<div class="wpb_single_image wpb_content_element vc_align_center">-->
 
-                                                <figure class="wpb_wrapper vc_figure">
-                                                    <div class="vc_single_image-wrapper   vc_box_border_grey">
-                                                        <img style="border-radius: 17px;"  width="675" height="653" src="3_Image-02.jpg"  class="vc_single_image-img attachment-full" alt="" srcset="3_Image-02.jpg 675w, 3_Image-02.jpg 300w"  sizes="(max-width: 675px) 100vw, 675px"></div>
-                                                </figure>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div style="text-align: center;margin-top: 7%;"><a class="btn btn-alt btn-sm" href="https://www.acedcoin.com/buycoin.html" target="_self">Buy Coins</a></div>
+                                                <!--<figure class="wpb_wrapper vc_figure">-->
+                                                    <!--<div class="vc_single_image-wrapper   vc_box_border_grey">-->
+                                                        <!--<img style="border-radius: 17px;"  width="675" height="653" src="3_Image-02.jpg"  class="vc_single_image-img attachment-full" alt="" srcset="3_Image-02.jpg 675w, 3_Image-02.jpg 300w"  sizes="(max-width: 675px) 100vw, 675px"></div>-->
+                                                <!--</figure>-->
+                                            <!--</div>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                            <!--<div style="text-align: center;margin-top: 7%;"><a class="btn btn-alt btn-sm" href="https://www.acedcoin.com/buycoin.html" target="_self">Buy Coins</a></div>-->
 
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="clearfix"></div>
-    </section>
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="clearfix"></div>-->
+    <!--</section>-->
     <section id="roadmap" class="vc_rows wpb_row vc_row-fluid section-pad section-bg section-connect">
         <div class="container">
             <div class="row">
