--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                     </div>
                 </div>
                 <div class="text-center co_buybutton">
-                    <a class="btn btn-alt btn-sm" style="font-size: 23px; padding: 5px 47px;" href="https://www.coinexchange.io/market/AceD/BTC" target="_self">Buy Coins</a>
+                    <a class="btn btn-alt btn-sm" style="font-size: 23px; padding: 5px 47px;" href="https://www.coinexchange.io/market/AceD/BTC" target="_self">Coinexchange.io</a>
 
                 </div>
             </div>
