--- a/dashboard/index-boxed.html
+++ b/dashboard/index-boxed.html
@@ -53,25 +53,6 @@
           <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-mainNav-33" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Main </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink-mainNav-33"> <a class="dropdown-item" href="index.html">Dashboard V1</a> <a class="dropdown-item" href="index-dark.html">Dashboard V2</a> <a class="dropdown-item" href="index-stock-data.html">Dashboard V3</a> <a class="dropdown-item" href="index-boxed.html">Dashboard Boxed</a> </div>
           </li>
-          <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-mainNav-33" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Admin UI </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink-mainNav-33"> <a href="admin-grid.html">Grid system</a> <a href="admin-sweet-alert.html">Sweet Alert</a> <a href="admin-rangeslider.html">Range Slider</a> <a href="admin-lightbox.html">Lightbox</a> <a href="admin-scrollbar.html">Scroll bar</a> <a href="admin-slider.html">Slider</a> </div>
-          </li>
-          <li class="nav-item dropdown mega-menu"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-mainNav-2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> COMPONENTS </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink-mainNav-2">
-              <ul class="drop-mega-menu">
-                <li> <a class="dropdown-header">UI ELEMENTS</a> <a href="ui-bootstrap.html">Bootstrap UI</a> <a href="ui-typography.html">Typography</a> <a href="ui-panels.html">Panels</a> <a href="ui-buttons.html">Buttons</a> <a href="ui-modals.html">Modals</a> <a href="ui-checkbox-radio.html">Checkboxs-Radios</a><a href="ui-spinners.html">Spinners</a> <a href="ui-accordions.html">Accordions/Toggles</a> <a href="ui-progressbars.html">Progress Bars</a> <a href="ui-notifications.html">Notification</a> <a href="ui-carousel.html">Carousel</a> <a href="ui-tooltips-popovers.html">Tooltips &amp; Popovers</a> <a href="ui-calendar.html">Calendar</a> </li>
-                <li> <a class="dropdown-header">Icons</a> <a href="icons-colored.html">Colored Icons</a> <a href="icons-materialdesign.html">Material Design</a> <a href="icons-dripicons.html">Dripicons</a> <a href="icons-fontawesome.html">Font awesome</a> <a href="icons-flags.html">Flag Icons</a> <a href="icons-file.html">File Icons</a> <a href="icons-folders.html">Folder Icons</a> <a href="icons-pe7.html">PE7 Icons</a> <a href="icons-typicons.html">Typicons</a>
-                  <hr>
-                  <a class="dropdown-header">Error Pages</a> <a href="404.html">Error 404</a> <a href="500.html">Error 500</a> </li>
-                <li class="pb-30"> <a class="dropdown-header">Form Elements</a> <a href="form-element.html">Basic Forms</a> <a href="form-elements-add-on.html">Add ons</a>
-                  <hr>
-                  <a class="dropdown-header">Dynamic Forms</a> <a href="form-elements-advance.html">Forms Advanced</a> <a href="form-elements-validation.html">Forms Validation</a> <a href="form-pickers.html">Form pickers</a> <a href="form-masking.html">Form Masking</a> <a href="form-wizards.html">Form Wizards</a> <a href="form-x-editable.html">X-Editable</a> <a href="file-upload.html">File upload</a> <a href="file-summernote.html">Form Summernote</a> </li>
-                <li class="pb-50"> <a class="dropdown-header">Tables</a> <a href="basic-table.html">Basic Table</a> <a href="dt-basic.html">Basic Initialization</a> <a href="dt-advance.html">Advance Initialization</a> <a href="dt-styling.html">Table Styling</a> <a href="editable-table.html">Editable Table</a> <a href="foo-table.html">Foo Table</a> <a href="jsgrid-table.html">Jsgrid Table</a>
-                  <hr>
-                  <a class="dropdown-header">Maps</a> <a href="vector-map.html">Vector Map</a> <a href="google-map.html">Google Map</a> </li>
-              </ul>
-            </div>
-          </li>
           <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle __mPS2id" href="#" id="navbarDropdownMenuLink-mainNav-33" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Ecommerce </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink-mainNav-33">
               <div class="sub-menu-wrap"> <a class="dropdown-item" href="#">Ecommerce Pages</a>
@@ -92,7 +73,8 @@
             </div>
           </li>
           <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle __mPS2id" href="#" id="navbarDropdownMenuLink-mainNav-33" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> FEATURED </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink-mainNav-33"> <a href="blank.html">Blank Page</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink-mainNav-33">
+
               <div class="sub-menu-wrap"> <a class="dropdown-item" href="#">Authentication </a>
                 <ul class="sub-menu right background-white">
                   <li> <a href="login.html" target="_blank">Login</a> </li>
@@ -108,9 +90,11 @@
                   <li> <a href="email-compose.html">Email Compose</a> </li>
                 </ul>
               </div>
-              <a href="gallery.html">Gallery</a> <a href="profile.html">Profile</a> <a href="faq.html">FAQ</a> </div>
+              <a href="profile.html">Profile</a>
+              <a href="faq.html">FAQ</a>
+            </div>
           </li>
-          <li class="nav-item"><a target="_blank" class="nav-link" href="documentation/index.html"> documentation </a></li>
+
         </ul>
       </div>
     </div>
@@ -230,137 +214,10 @@
           <li><a href="index-stock-data.html">Dashboard V3</a></li>
         </ul>
       </li>
-      <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#admin-uir">
-        <div class="pull-left"><i class="mdi mdi-apps mr-20"></i><span class="right-nav-text">Admin UI</span></div>
-        <div class="pull-right"><span class="label label-primary">new</span></div>
-        <div class="clearfix"></div>
-        </a>
-        <ul id="admin-uir" class="collapse collapse-level-1">
-          <li><a href="admin-grid.html">Grid system</a></li>
-          <li><a href="admin-sweet-alert.html">Sweet Alert</a></li>
-          <li><a href="admin-rangeslider.html">Range Slider</a></li>
-          <li><a href="admin-lightbox.html">Lightbox</a></li>
-          <li><a href="admin-scrollbar.html">Scroll bar</a></li>
-          <li><a href="admin-slider.html">Slider</a></li>
-        </ul>
-      </li>
       <li>
         <hr class="light-grey-hr mb-10"/>
-      </li>
-      <li class="navigation-header"> <span>component</span> <i class="mdi mdi-more"></i> </li>
-      <li> <a  class="active-page" href="javascript:void(0);" data-toggle="collapse" data-target="#ui_element">
-        <div class="pull-left"><i class="mdi mdi-puzzle mr-20"></i><span class="right-nav-text">UI Elements</span></div>
-        <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-        <div class="clearfix"></div>
-        </a>
-        <ul id="ui_element" class="collapse collapse-level-1 in">
-          <li><a href="ui-bootstrap.html">Bootstrap UI</a></li>
-          <li><a href="ui-typography.html">Typography</a></li>
-          <li><a href="ui-panels.html">Panels</a></li>
-          <li><a href="ui-buttons.html">Buttons</a></li>
-          <li><a href="ui-modals.html">Modals</a></li>
-          <li><a href="ui-checkbox-radio.html">Checkboxs-Radios</a></li>
-          <li><a href="ui-spinners.html">Spinners</a></li>
-          <li><a href="ui-accordions.html">Accordions/Toggles</a></li>
-          <li><a href="ui-progressbars.html">Progress Bars</a></li>
-          <li><a href="ui-notifications.html">Notification</a></li>
-          <li><a href="ui-carousel.html">Carousel</a></li>
-          <li><a href="ui-tooltips-popovers.html" class="active">Tooltips &amp; Popovers</a></li>
-          <li><a href="ui-calendar.html">Calendar</a></li>
-        </ul>
-      </li>
-      <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#icon_list">
-        <div class="pull-left"><i class="mdi mdi-cube-outline mr-20"></i><span class="right-nav-text">Icons</span></div>
-        <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-        <div class="clearfix"></div>
-        </a>
-        <ul id="icon_list" class="collapse collapse-level-1">
-          <li><a href="icons-colored.html">Colored Icons</a></li>
-          <li><a href="icons-materialdesign.html">Material Design</a></li>
-          <li><a href="icons-dripicons.html">Dripicons</a></li>
-          <li><a href="icons-fontawesome.html">Font awesome</a></li>
-          <li><a href="icons-flags.html">Flag Icons</a></li>
-          <li><a href="icons-file.html">File Icons</a></li>
-          <li><a href="icons-folders.html">Folder Icons</a></li>
-          <li><a href="icons-pe7.html">PE7 Icons</a></li>
-          <li><a href="icons-typicons.html">Typicons</a></li>
-        </ul>
-      </li>
-      <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#form_main">
-        <div class="pull-left"><i class="mdi mdi-format-align-left mr-20"></i><span class="right-nav-text">Forms</span></div>
-        <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-        <div class="clearfix"></div>
-        </a>
-        <ul id="form_main" class="collapse collapse-level-1">
-          <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#form_elements">Form elements
-            <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-            <div class="clearfix"></div>
-            </a>
-            <ul id="form_elements" class="collapse collapse-level-2">
-              <li> <a href="form-element.html">Basic Forms</a> </li>
-              <li> <a href="form-elements-add-on.html">Add on</a> </li>
-              <li> <a href="form-elements-advance.html">Forms Advanced</a> </li>
-              <li> <a href="form-elements-validation.html">Forms Validation</a> </li>
-            </ul>
-          </li>
-          <li> <a href="form-pickers.html">Form pickers</a> </li>
-          <li> <a href="form-masking.html">Form Masking</a> </li>
-          <li> <a href="form-wizards.html">Form Wizards</a> </li>
-          <li> <a href="form-x-editable.html">X-Editable</a> </li>
-          <li> <a href="file-upload.html">File upload</a> </li>
-          <li> <a href="file-summernote.html">Form Summernote</a> </li>
-        </ul>
-      </li>
-      <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#chart_list">
-        <div class="pull-left"><i class="mdi mdi-chart-donut-variant mr-20"></i><span class="right-nav-text">Charts </span></div>
-        <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-        <div class="clearfix"></div>
-        </a>
-        <ul id="chart_list" class="collapse collapse-level-1 two-col-list">
-          <li> <a href="flot-chart.html">Flot Chart</a> </li>
-          <li> <a href="echart.html">Echart Chart</a> </li>
-          <li> <a href="morris-chart.html">Morris Chart</a> </li>
-          <li> <a href="chart.js.html">chartjs</a> </li>
-          <li> <a href="sparkline.html">Sparkline</a> </li>
-          <li> <a href="peity-chart.html">Peity Chart</a> </li>
-        </ul>
-      </li>
-      <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#table_list">
-        <div class="pull-left"><i class="mdi mdi-view-dashboard mr-20"></i><span class="right-nav-text">Tables</span></div>
-        <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-        <div class="clearfix"></div>
-        </a>
-        <ul id="table_list" class="collapse collapse-level-1 two-col-list">
-          <li> <a href="basic-table.html">Basic Table</a> </li>
-          <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#data_tables">Data Table
-            <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-            <div class="clearfix"></div>
-            </a>
-            <ul id="data_tables" class="collapse collapse-level-2">
-              <li> <a href="dt-basic.html">Basic Initialization</a> </li>
-              <li> <a href="dt-advance.html">Advance Initialization</a> </li>
-              <li> <a href="dt-styling.html">Table Styling</a> </li>
-            </ul>
-          </li>
-          <li> <a href="editable-table.html">Editable Table</a> </li>
-          <li> <a href="foo-table.html">Foo Table</a> </li>
-          <li> <a href="jsgrid-table.html">Jsgrid Table</a> </li>
-        </ul>
-      </li>
-      <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#maps_list">
-        <div class="pull-left"><i class="mdi mdi-compass mr-20"></i><span class="right-nav-text">maps</span></div>
-        <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-        <div class="clearfix"></div>
-        </a>
-        <ul id="maps_list" class="collapse collapse-level-1">
-          <li> <a href="vector-map.html">Vector Map</a> </li>
-          <li> <a href="google-map.html">Google Map</a> </li>
-        </ul>
       </li>
       <!-- ecommerce -->
-      <li>
-        <hr class="light-grey-hr mb-10"/>
-      </li>
       <li class="navigation-header"> <span>Ecommerce</span> <i class="mdi mdi-more"></i> </li>
       <li> <a  href="javascript:void(0);" data-toggle="collapse" data-target="#pages_ecommerce">
         <div class="pull-left"><i class="mdi mdi-cart mr-20"></i><span class="right-nav-text">Ecommerce Pages</span></div>
@@ -396,7 +253,6 @@
         <div class="clearfix"></div>
         </a>
         <ul id="pages_dr" class="collapse collapse-level-1 two-col-list">
-          <li> <a href="blank.html">Blank Page</a> </li>
           <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#authentication_list">Authentication pages
             <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
             <div class="clearfix"></div>
@@ -418,40 +274,8 @@
               <li> <a href="email-compose.html">Email Compose</a> </li>
             </ul>
           </li>
-          <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#error_pages">error pages
-            <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-            <div class="clearfix"></div>
-            </a>
-            <ul id="error_pages" class="collapse collapse-level-2">
-              <li> <a href="404.html">Error 404</a> </li>
-              <li> <a href="500.html">Error 500</a> </li>
-            </ul>
-          </li>
-          <li> <a href="gallery.html">Gallery</a> </li>
           <li> <a href="profile.html">Profile</a> </li>
           <li> <a href="faq.html">FAQ</a> </li>
-        </ul>
-      </li>
-      <li> <a href="documentation/index.html">
-        <div class="pull-left"><i class="mdi mdi-book mr-20"></i><span class="right-nav-text">documentation</span></div>
-        <div class="clearfix"></div>
-        </a> </li>
-      <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#dropdown_lvl1">
-        <div class="pull-left"><i class="mdi mdi-chart-timeline mr-20"></i><span class="right-nav-text">multilevel</span></div>
-        <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-        <div class="clearfix"></div>
-        </a>
-        <ul id="dropdown_lvl1" class="collapse collapse-level-1">
-          <li> <a href="#">Item level 1</a> </li>
-          <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#dropdown_lvl2">Dropdown level 2
-            <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-            <div class="clearfix"></div>
-            </a>
-            <ul id="dropdown_lvl2" class="collapse collapse-level-2">
-              <li> <a href="#">Item level 2</a> </li>
-              <li> <a href="#">Item level 2</a> </li>
-            </ul>
-          </li>
         </ul>
       </li>
     </ul>
