--- a/dashboard/invoice-archive.html
+++ b/dashboard/invoice-archive.html
@@ -150,155 +150,29 @@
   <div class="fixed-sidebar-left">
     <ul class="nav navbar-nav side-nav nicescroll-bar">
       <li class="navigation-header"> <span>Main</span> <i class="mdi mdi-more"></i> </li>
-      <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#admin-dash">
+      <li> <a  href="javascript:void(0);" data-toggle="collapse" data-target="#admin-dash">
         <div class="pull-left"><i class="mdi mdi-apps mr-20"></i><span class="right-nav-text">Dashboard</span></div>
         <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
         <div class="clearfix"></div>
-        </a>
-        <ul id="admin-dash" class="collapse collapse-level-1">
+      </a>
+        <ul id="admin-dash" class="collapse collapse-level-1 in">
           <li><a href="index.html">Dashboard V1</a></li>
           <li><a href="index-dark.html">Dashboard V2</a></li>
           <li><a href="index-stock-data.html">Dashboard V3</a></li>
           <li><a href="index-boxed.html">Dashboard Boxed</a></li>
         </ul>
       </li>
-      <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#admin-uir">
-        <div class="pull-left"><i class="mdi mdi-apps mr-20"></i><span class="right-nav-text">Admin UI</span></div>
-        <div class="pull-right"><span class="label label-primary">new</span></div>
-        <div class="clearfix"></div>
-        </a>
-        <ul id="admin-uir" class="collapse collapse-level-1">
-          <li><a href="admin-grid.html">Grid system</a></li>
-          <li><a href="admin-sweet-alert.html">Sweet Alert</a></li>
-          <li><a href="admin-rangeslider.html">Range Slider</a></li>
-          <li><a href="admin-lightbox.html">Lightbox</a></li>
-          <li><a href="admin-scrollbar.html">Scroll bar</a></li>
-          <li><a href="admin-slider.html">Slider</a></li>
-        </ul>
-      </li>
       <li>
         <hr class="light-grey-hr mb-10"/>
       </li>
-      <li class="navigation-header"> <span>component</span> <i class="mdi mdi-more"></i> </li>
-      <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#ui_element">
-        <div class="pull-left"><i class="mdi mdi-puzzle mr-20"></i><span class="right-nav-text">UI Elements</span></div>
-        <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-        <div class="clearfix"></div>
-        </a>
-        <ul id="ui_element" class="collapse collapse-level-1">
-          <li><a href="ui-bootstrap.html" class="active">Bootstrap UI</a></li>
-          <li><a href="ui-typography.html">Typography</a></li>
-          <li><a href="ui-panels.html">Panels</a></li>
-          <li><a href="ui-buttons.html">Buttons</a></li>
-          <li><a href="ui-modals.html">Modals</a></li>
-          <li><a href="ui-checkbox-radio.html">Checkboxs-Radios</a></li>
-          <li><a href="ui-spinners.html">Spinners</a></li>
-          <li><a href="ui-accordions.html">Accordions/Toggles</a></li>
-          <li><a href="ui-progressbars.html">Progress Bars</a></li>
-          <li><a href="ui-notifications.html">Notification</a></li>
-          <li><a href="ui-carousel.html">Carousel</a></li>
-          <li><a href="ui-tooltips-popovers.html">Tooltips & Popovers</a></li>
-          <li><a href="ui-calendar.html">Calendar</a></li>
-        </ul>
-      </li>
-      <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#icon_list">
-        <div class="pull-left"><i class="mdi mdi-cube-outline mr-20"></i><span class="right-nav-text">Icons</span></div>
-        <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-        <div class="clearfix"></div>
-        </a>
-        <ul id="icon_list" class="collapse collapse-level-1">
-          <li><a href="icons-colored.html">Colored Icons</a></li>
-          <li><a href="icons-materialdesign.html">Material Design</a></li>
-          <li><a href="icons-dripicons.html">Dripicons</a></li>
-          <li><a href="icons-fontawesome.html">Font awesome</a></li>
-          <li><a href="icons-flags.html">Flag Icons</a></li>
-          <li><a href="icons-file.html">File Icons</a></li>
-          <li><a href="icons-folders.html">Folder Icons</a></li>
-          <li><a href="icons-pe7.html">PE7 Icons</a></li>
-          <li><a href="icons-typicons.html">Typicons</a></li>
-        </ul>
-      </li>
-      <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#form_main">
-        <div class="pull-left"><i class="mdi mdi-format-align-left mr-20"></i><span class="right-nav-text">Forms</span></div>
-        <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-        <div class="clearfix"></div>
-        </a>
-        <ul id="form_main" class="collapse collapse-level-1">
-          <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#form_elements">Form elements
-            <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-            <div class="clearfix"></div>
-            </a>
-            <ul id="form_elements" class="collapse collapse-level-2">
-              <li> <a href="form-element.html">Basic Forms</a> </li>
-              <li> <a href="form-elements-add-on.html">Add on</a> </li>
-              <li> <a href="form-elements-advance.html">Forms Advanced</a> </li>
-              <li> <a href="form-elements-validation.html">Forms Validation</a> </li>
-            </ul>
-          </li>
-          <li> <a href="form-pickers.html">Form pickers</a> </li>
-          <li> <a href="form-masking.html">Form Masking</a> </li>
-          <li> <a href="form-wizards.html">Form Wizards</a> </li>
-          <li> <a href="form-x-editable.html">X-Editable</a> </li>
-          <li> <a href="file-upload.html">File upload</a> </li>
-          <li> <a href="file-summernote.html">Form Summernote</a> </li>
-        </ul>
-      </li>
-      <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#chart_list">
-        <div class="pull-left"><i class="mdi mdi-chart-donut-variant mr-20"></i><span class="right-nav-text">Charts </span></div>
-        <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-        <div class="clearfix"></div>
-        </a>
-        <ul id="chart_list" class="collapse collapse-level-1 two-col-list">
-          <li> <a href="flot-chart.html">Flot Chart</a> </li>
-          <li> <a href="echart.html">Echart Chart</a> </li>
-          <li> <a href="morris-chart.html">Morris Chart</a> </li>
-          <li> <a href="chart.js.html">chartjs</a> </li>
-          <li> <a href="sparkline.html">Sparkline</a> </li>
-          <li> <a href="peity-chart.html">Peity Chart</a> </li>
-        </ul>
-      </li>
-      <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#table_list">
-        <div class="pull-left"><i class="mdi mdi-view-dashboard mr-20"></i><span class="right-nav-text">Tables</span></div>
-        <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-        <div class="clearfix"></div>
-        </a>
-        <ul id="table_list" class="collapse collapse-level-1 two-col-list">
-          <li> <a href="basic-table.html">Basic Table</a> </li>
-          <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#data_tables">Data Table
-            <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-            <div class="clearfix"></div>
-            </a>
-            <ul id="data_tables" class="collapse collapse-level-2">
-              <li> <a href="dt-basic.html">Basic Initialization</a> </li>
-              <li> <a href="dt-advance.html">Advance Initialization</a> </li>
-              <li> <a href="dt-styling.html">Table Styling</a> </li>
-            </ul>
-          </li>
-          <li> <a href="editable-table.html">Editable Table</a> </li>
-          <li> <a href="foo-table.html">Foo Table</a> </li>
-          <li> <a href="jsgrid-table.html">Jsgrid Table</a> </li>
-        </ul>
-      </li>
-      <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#maps_list">
-        <div class="pull-left"><i class="mdi mdi-compass mr-20"></i><span class="right-nav-text">maps</span></div>
-        <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-        <div class="clearfix"></div>
-        </a>
-        <ul id="maps_list" class="collapse collapse-level-1">
-          <li> <a href="vector-map.html">Vector Map</a> </li>
-          <li> <a href="google-map.html">Google Map</a> </li>
-        </ul>
-      </li>
+
       <!-- ecommerce -->
-      <li>
-        <hr class="light-grey-hr mb-10"/>
-      </li>
       <li class="navigation-header"> <span>Ecommerce</span> <i class="mdi mdi-more"></i> </li>
       <li> <a  href="javascript:void(0);" data-toggle="collapse" data-target="#pages_ecommerce">
         <div class="pull-left"><i class="mdi mdi-cart mr-20"></i><span class="right-nav-text">Ecommerce Pages</span></div>
         <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
         <div class="clearfix"></div>
-        </a>
+      </a>
         <ul id="pages_ecommerce" class="collapse collapse-level-2">
           <li> <a href="ecommerce-dashboard.html">Shop dashboard</a> </li>
           <li> <a href="ecommerce-products-details.html">Products List</a> </li>
@@ -310,11 +184,11 @@
         <div class="pull-left"><i class="mdi mdi-file-document mr-20"></i><span class="right-nav-text">Invoice Pages</span></div>
         <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
         <div class="clearfix"></div>
-        </a>
-        <ul id="invoice_list" class="collapse collapse-level-1 two-col-list in">
+      </a>
+        <ul id="invoice_list" class="collapse collapse-level-2">
           <li> <a href="invoice.html">Invoice</a> </li>
           <li> <a href="invoice-list.html">Invoice List</a> </li>
-          <li> <a class="active" href="invoice-archive.html">Invoice Archive</a> </li>
+          <li> <a href="invoice-archive.html" class="active">Invoice Archive</a> </li>
         </ul>
       </li>
       <li>
@@ -322,17 +196,17 @@
       </li>
       <!-- ecommerce -->
       <li class="navigation-header"> <span>featured</span> <i class="mdi mdi-more"></i> </li>
-      <li> <a   href="javascript:void(0);" data-toggle="collapse" data-target="#pages_dr">
+      <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#pages_dr">
         <div class="pull-left"><i class="mdi mdi-star-circle mr-20"></i><span class="right-nav-text">Sample Pages</span></div>
         <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
         <div class="clearfix"></div>
-        </a>
-        <ul id="pages_dr" class="collapse collapse-level-2">
-          <li> <a href="blank.html" >Blank Page</a> </li>
+      </a>
+        <ul id="pages_dr" class="collapse collapse-level-1 two-col-list">
+
           <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#authentication_list">Authentication pages
             <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
             <div class="clearfix"></div>
-            </a>
+          </a>
             <ul id="authentication_list" class="collapse collapse-level-2">
               <li> <a href="login.html" target="_blank">Login</a> </li>
               <li> <a href="signup.html" target="_blank">Register</a> </li>
@@ -343,47 +217,15 @@
           <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#mailbox">Mailbox
             <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
             <div class="clearfix"></div>
-            </a>
+          </a>
             <ul id="mailbox" class="collapse collapse-level-2">
               <li> <a href="email-inbox.html">Email Inbox</a> </li>
               <li> <a href="email-detail.html">Email Detail</a> </li>
               <li> <a href="email-compose.html">Email Compose</a> </li>
             </ul>
           </li>
-          <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#error_pages">error pages
-            <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-            <div class="clearfix"></div>
-            </a>
-            <ul id="error_pages" class="collapse collapse-level-2">
-              <li> <a href="404.html">Error 404</a> </li>
-              <li> <a href="500.html">Error 500</a> </li>
-            </ul>
-          </li>
-          <li> <a href="gallery.html">Gallery</a> </li>
           <li> <a href="profile.html">Profile</a> </li>
           <li> <a href="faq.html">FAQ</a> </li>
-        </ul>
-      </li>
-      <li> <a href="documentation/index.html">
-        <div class="pull-left"><i class="mdi mdi-book mr-20"></i><span class="right-nav-text">documentation</span></div>
-        <div class="clearfix"></div>
-        </a> </li>
-      <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#dropdown_lvl1">
-        <div class="pull-left"><i class="mdi mdi-chart-timeline mr-20"></i><span class="right-nav-text">multilevel</span></div>
-        <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-        <div class="clearfix"></div>
-        </a>
-        <ul id="dropdown_lvl1" class="collapse collapse-level-1">
-          <li> <a href="#">Item level 1</a> </li>
-          <li> <a href="javascript:void(0);" data-toggle="collapse" data-target="#dropdown_lvl2">Dropdown level 2
-            <div class="pull-right"><i class="mdi mdi-chevron-down"></i></div>
-            <div class="clearfix"></div>
-            </a>
-            <ul id="dropdown_lvl2" class="collapse collapse-level-2">
-              <li> <a href="#">Item level 2</a> </li>
-              <li> <a href="#">Item level 2</a> </li>
-            </ul>
-          </li>
         </ul>
       </li>
     </ul>
